--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#190fd4</color>
-    <color name="colorPrimaryDark">#091888</color>
+    <color name="colorPrimary">#0fb25b</color>
+    <!--<color name="colorPrimaryDark">#077660</color>-->
+    <color name="colorPrimaryDark">#0fb25b</color>
     <color name="colorAccent">#fe894e</color>
 </resources>
